k8s/traefik/traefik-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.9
        args:
        - "--api.dashboard=true"
        - "--api.insecure=true"
        - "--providers.kubernetesIngress=true"
        - "--entrypoints.web.address=:80"
        - "--entrypoints.websecure.address=:443"
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        - name: dashboard
          containerPort: 8080
