k8s/traefik/traefik-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - port: 8080
    targetPort: 8080
    name: dashboard
