k8s/traefik/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: LoadBalancer
  externalIPs:
    - 83.217.223.112
  selector:
    app: traefik
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: dashboard
    port: 8080
    targetPort: 8080
    protocol: TCP
